unpackaged/main/default/objects/Cohort_Student__c/Cohort_Student__c.object-meta.xml
<CustomObject>
    <label>Cohort Student</label>
    <nameField>
        <label>Cohort Student</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohort Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>