unpackaged/main/default/objects/Cohort_Student__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cohort Students</relationshipLabel>
    <relationshipName>Cohort_Students</relationshipName>
    <type>Lookup</type>
</CustomField>