unpackaged/main/default/objects/Cohort_Student__c/fields/Cohort_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Start_Date__c</fullName>
    <formula>Cohort__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort Start Date</label>
    <type>Date</type>
</CustomField>