unpackaged/main/default/objects/Cohort_Student__c/fields/Cohort_Student_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Student_ID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort Student ID (18)</label>
    <type>Text</type>
</CustomField>