unpackaged/main/default/objects/Cohort_Student__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cohort Students (Contact)</relationshipLabel>
    <relationshipName>Cohort_Students1</relationshipName>
    <type>Lookup</type>
</CustomField>