unpackaged/main/default/objects/Cohort_Student__c/fields/Contact_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Primary Email</label>
    <type>Text</type>
</CustomField>