unpackaged/main/default/objects/Cohort_Student__c/fields/First_Date_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>First_Date_of_Engagement__c</fullName>
    <description>Date student engagement starts.</description>
    <label>First Date of Engagement</label>
    <type>Date</type>
</CustomField>