unpackaged/main/default/objects/Cohort_Student__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cohort Students</relationshipLabel>
    <relationshipName>Cohort_Students</relationshipName>
    <type>Lookup</type>
</CustomField>