unpackaged/main/default/objects/Cohort_Student__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Cohort Students</relationshipLabel>
    <relationshipName>Cohort_Students</relationshipName>
    <type>Lookup</type>
</CustomField>