unpackaged/main/default/objects/Cohort_Student__c/fields/Reason_for_Sale_Pending__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Sale_Pending__c</fullName>
    <label>Reason for Sale Pending</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>