unpackaged/main/default/objects/Cohort_Student__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cohort Students</relationshipLabel>
    <relationshipName>Cohort_Students</relationshipName>
    <type>Lookup</type>
</CustomField>